# find_watch

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  railway.json  requirements.txt  start.sh
config/: settings.py  urls.py  wsgi.py
find_watch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/js/: custom.js
staticfiles/css/: custom.css
templates/: base.html
templates/watch/: home.html  product_list.html  work_parse.html
watch/: models.py  page_parser.py  urls.py  utils.py  views.py
watch/migrations/: 0001_initial.py  0002_parsedproduct_image_url.py
