[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "find-watch"
version = "0.1.0"
description = "Parser for watch catalog with Playwright and Django"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.11.16",
    "aiofiles>=23.2.1",  # Добавлено явно
    "playwright>=1.40.0",
    "tqdm>=4.67.1",
    "django>=5.2",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "psycopg2-binary>=2.9.10; platform_system != 'Windows'",
    "psycopg2>=2.9.10; platform_system == 'Windows'",
    "fake-useragent>=2.1.0",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=5.1.0",
    "django-extensions>=4.1",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/find-watch"
Repository = "https://github.com/yourusername/find-watch"

[tool.setuptools]
packages = ["config", "watch"]
zip-safe = false

[tool.setuptools.package-dir]
"" = "."
config = "config"
watch = "watch"

[railway]
restart = true
