[build-system]
requires = ["setuptools>=77.0.0", "wheel"]  # Обновлено для поддержки нового формата лицензии
build-backend = "setuptools.build_meta"

[project]
name = "find-watch"
version = "0.1.0"
description = "Parser for watch catalog with Playwright and Django"
readme = "README.md"  # Убедитесь, что файл существует в корне проекта
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.11"
license = "MIT"  # Изменено с таблицы на простую строку (SPDX формат)
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",  # Добавлен классификатор лицензии
]
dependencies = [
    "aiohttp>=3.11.16",
    "playwright>=1.40.0",
    "tqdm>=4.67.1",
    "django>=5.2",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "psycopg2-binary>=2.9.10; platform_system != 'Windows'",
    "psycopg2>=2.9.10; platform_system == 'Windows'",
    "fake-useragent>=2.1.0",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=5.1.0",
    "django-extensions>=4.1",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/find-watch"
Repository = "https://github.com/yourusername/find-watch"

[tool.setuptools]
# Указываем только существующие пакеты!
packages = ["watch"]  # Убрал "config", если такой папки нет
zip-safe = false

[tool.setuptools.package-dir]
"" = "."
watch = "watch"  # Только если папка watch существует
